Bug 1160127 - Send HFP/A2DP profile disconnection notification. r=btian, a=jocheng