dom/bluetooth/bluedroid/BluetoothA2dpManager.h
@@ -64,6 +64,7 @@ public:
   uint64_t GetTotalMediaNumber();
   void GetTitle(nsAString& aTitle);
   void GetArtist(nsAString& aArtist);
+  void HandleBackendError();
 
 private:
   class CleanupA2dpResultHandler;
